# installer

./: Cargo.toml  README.md  rustfmt.toml
assets/: icon.rgba
src/: app.rs  assets.rs  colors.rs  installer.rs  main.rs  style.rs
src/screen/: finish.rs  greeting.rs  installation.rs  mod.rs  settings.rs
