[package]
name = "obvilion-installer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
native-dialog = "0.6"
dirs = "4.0"

[dependencies.iced]
version = "0.4"
features = ["image", "svg"]
